fix z-index of delete and edit page modal

--- a/frontend/src/_styles/pages-sidebar.scss
+++ b/frontend/src/_styles/pages-sidebar.scss
@@ -795,3 +795,17 @@
         }
     }
 }
+
+.modal-backdrop.show {
+    z-index: 9999;
+    & + .delete-folder-modal {
+        z-index: 9999;
+    }
+}
+
+.modal-backdrop.show {
+    z-index: 9999;
+    & + .delete-page-modal {
+        z-index: 9999;
+    }
+}
